[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-terminal"
version = "2.0.0"
description = "Cyber Intelligence & Productivity Terminal — security tooling and daily productivity in one polished TUI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Shaheer Ch" }]
keywords = ["cybersecurity", "tui", "productivity", "osint", "port-scanner", "pomodoro", "rich"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "requests>=2.28",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/shaheerch6/nexus"
Repository = "https://github.com/shaheerch6/nexus"
Issues = "https://github.com/shaheerch6/nexus/issues"

[project.scripts]
nexus = "nexus.__main__:main"

[tool.setuptools.packages.find]
include = ["nexus*"]

[tool.ruff]
line-length = 100
target-version = "py39"
